--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" class="dark">
 <head>
@@ -28,7 +27,7 @@
 
   <!-- Main App -->
   <div class="min-h-screen p-4" id="mainApp" style="display:none">
-    <!-- Header with Search, Theme Toggle, and Movie Link -->
+    <!-- Header -->
     <div class="flex flex-col sm:flex-row justify-between items-center mb-4 gap-4">
       <h1 class="text-3xl font-bold">📈 Trending Manga</h1>
       <div class="flex items-center gap-4">
@@ -99,6 +98,8 @@
     let bookmarks = JSON.parse(localStorage.getItem('bookmarks')) || [];
     let currentPage = 1;
     let isLoading = false;
+    const CACHE_KEY = 'manga-cache';
+    const CACHE_DURATION = 5 * 60 * 1000; // 5 minutes
 
     // Function to hide loader and show main app
     function showMainApp() {
@@ -124,6 +125,22 @@
       document.getElementById('toggleTheme').textContent = isDark ? '🌞 Light Mode' : '🌙 Dark Mode';
     });
 
+    // Cache Utility
+    function getCachedData(key) {
+      const cached = localStorage.getItem(key);
+      if (!cached) return null;
+      const { data, timestamp } = JSON.parse(cached);
+      if (Date.now() - timestamp > CACHE_DURATION) {
+        localStorage.removeItem(key);
+        return null;
+      }
+      return data;
+    }
+
+    function setCachedData(key, data) {
+      localStorage.setItem(key, JSON.stringify({ data, timestamp: Date.now() }));
+    }
+
     // Fetch Trending Manga with Infinite Scroll
     async function fetchTrending(page = 1) {
       if (isLoading) return;
@@ -131,47 +148,66 @@
       document.getElementById('loadingMore').classList.remove('hidden');
       const genre = document.getElementById('genreFilter').value;
       const searchQuery = document.getElementById('searchInput').value.toLowerCase();
+      const cacheKey = `${CACHE_KEY}-${page}-${genre}-${searchQuery}`;
+      let data = getCachedData(cacheKey);
+
+      if (data) {
+        renderManga(data, page);
+        isLoading = false;
+        document.getElementById('loadingMore').classList.add('hidden');
+        return;
+      }
+
       let url = `https://api.mangadex.org/manga?limit=20&offset=${(page - 1) * 20}&order[followedCount]=desc&includes[]=cover_art`;
       if (genre !== 'all') url += `&contentRating[]=safe&contentRating[]=suggestive&tags[]=${genre.toLowerCase()}`;
       
       try {
-        const res = await fetch(url);
-        if (!res.ok) throw new Error(`API error: ${res.status}`);
-        const data = await res.json();
-        const list = document.getElementById('mangaList');
-        if (page === 1) list.innerHTML = '';
-
-        if (!data.data || data.data.length === 0) {
-          list.innerHTML = '<p class="text-center col-span-full">No manga found.</p>';
+        const res = await fetch(url, { headers: { 'User-Agent': 'StreamMe-Manga-App/1.0' } });
+        if (res.status === 429) {
+          document.getElementById('mangaList').innerHTML = '<p class="text-center col-span-full text-yellow-500">Rate limit hit. Retrying in 10 seconds...</p>';
+          setTimeout(() => fetchTrending(page), 10000);
           isLoading = false;
-          document.getElementById('loadingMore').classList.add('hidden');
           return;
         }
-
-        data.data.forEach(manga => {
-          if (searchQuery && !manga.attributes.title.en.toLowerCase().includes(searchQuery)) return;
-          const cover = manga.relationships.find(r => r.type === 'cover_art');
-          const fileName = cover?.attributes?.fileName;
-          const imgUrl = fileName ? `https://uploads.mangadex.org/covers/${manga.id}/${fileName}.256.jpg` : 'https://via.placeholder.com/150';
-          const card = document.createElement('div');
-          card.className = 'bg-gray-900 p-2 rounded hover:scale-105 transition';
-          card.innerHTML = `
-            <img src="${imgUrl}" alt="cover" class="rounded w-full h-48 object-cover">
-            <h2 class="mt-2 text-sm font-semibold">${manga.attributes.title.en || 'No Title'}</h2>
-            <button class="mt-2 bg-blue-600 text-white px-2 py-1 rounded w-full" onclick="openManga('${manga.id}')">View</button>
-          `;
-          list.appendChild(card);
-        });
-
-        isLoading = false;
-        document.getElementById('loadingMore').classList.add('hidden');
-        currentPage = page;
+        if (!res.ok) throw new Error(`API error: ${res.status}`);
+        data = await res.json();
+        setCachedData(cacheKey, data);
+        renderManga(data, page);
       } catch (error) {
         console.error('Error fetching trending manga:', error);
-        document.getElementById('mangaList').innerHTML = '<p class="text-center col-span-full text-red-500">Failed to load manga. Please try again later.</p>';
+        document.getElementById('mangaList').innerHTML = '<p class="text-center col-span-full text-red-500">Failed to load manga. Try again later.</p>';
+      } finally {
         isLoading = false;
         document.getElementById('loadingMore').classList.add('hidden');
       }
+    }
+
+    function renderManga(data, page) {
+      const list = document.getElementById('mangaList');
+      if (page === 1) list.innerHTML = '';
+
+      if (!data.data || data.data.length === 0) {
+        list.innerHTML = '<p class="text-center col-span-full">No manga found.</p>';
+        return;
+      }
+
+      const searchQuery = document.getElementById('searchInput').value.toLowerCase();
+      data.data.forEach(manga => {
+        if (searchQuery && !manga.attributes.title.en.toLowerCase().includes(searchQuery)) return;
+        const cover = manga.relationships.find(r => r.type === 'cover_art');
+        const fileName = cover?.attributes?.fileName;
+        const imgUrl = fileName ? `/api/proxy/cover/${manga.id}/${fileName}` : 'https://via.placeholder.com/150';
+        const card = document.createElement('div');
+        card.className = 'bg-gray-900 p-2 rounded hover:scale-105 transition';
+        card.innerHTML = `
+          <img src="${imgUrl}" alt="cover" class="rounded w-full h-48 object-cover">
+          <h2 class="mt-2 text-sm font-semibold">${manga.attributes.title.en || 'No Title'}</h2>
+          <button class="mt-2 bg-blue-600 text-white px-2 py-1 rounded w-full" onclick="openManga('${manga.id}')">View</button>
+        `;
+        list.appendChild(card);
+      });
+
+      currentPage = page;
     }
 
     // Initial fetch
@@ -206,17 +242,21 @@
       modal.classList.remove('hidden');
 
       try {
-        const res = await fetch(`https://api.mangadex.org/manga/${id}?includes[]=cover_art&includes[]=author`);
+        const res = await fetch(`https://api.mangadex.org/manga/${id}?includes[]=cover_art&includes[]=author`, {
+          headers: { 'User-Agent': 'StreamMe-Manga-App/1.0' }
+        });
         if (!res.ok) throw new Error(`API error: ${res.status}`);
         const manga = await res.json();
 
-        const chapRes = await fetch(`https://api.mangadex.org/chapter?manga=${id}&translatedLanguage[]=en&order[chapter]=asc&limit=100`);
+        const chapRes = await fetch(`https://api.mangadex.org/chapter?manga=${id}&translatedLanguage[]=en&order[chapter]=asc&limit=100`, {
+          headers: { 'User-Agent': 'StreamMe-Manga-App/1.0' }
+        });
         if (!chapRes.ok) throw new Error(`Chapter API error: ${chapRes.status}`);
         const chapData = await chapRes.json();
         const chapters = chapData.data;
 
         const cover = manga.data.relationships.find(r => r.type === 'cover_art');
-        const imgUrl = cover?.attributes?.fileName ? `https://uploads.mangadex.org/covers/${manga.data.id}/${cover.attributes.fileName}` : 'https://via.placeholder.com/150';
+        const imgUrl = cover?.attributes?.fileName ? `/api/proxy/cover/${manga.data.id}/${cover.attributes.fileName}` : 'https://via.placeholder.com/150';
         detail.innerHTML = `
           <img src="${imgUrl}" class="w-full h-64 object-cover rounded">
           <h2 class="text-2xl font-bold">${manga.data.attributes.title.en}</h2>
@@ -272,11 +312,13 @@
       favoritesList.innerHTML = '';
       favorites.forEach(async id => {
         try {
-          const res = await fetch(`https://api.mangadex.org/manga/${id}?includes[]=cover_art`);
+          const res = await fetch(`https://api.mangadex.org/manga/${id}?includes[]=cover_art`, {
+            headers: { 'User-Agent': 'StreamMe-Manga-App/1.0' }
+          });
           if (!res.ok) throw new Error(`API error: ${res.status}`);
           const manga = await res.json();
           const cover = manga.data.relationships.find(r => r.type === 'cover_art');
-          const imgUrl = cover?.attributes?.fileName ? `https://uploads.mangadex.org/covers/${manga.data.id}/${cover.attributes.fileName}.256.jpg` : 'https://via.placeholder.com/150';
+          const imgUrl = cover?.attributes?.fileName ? `/api/proxy/cover/${manga.data.id}/${cover.attributes.fileName}` : 'https://via.placeholder.com/150';
           const card = document.createElement('div');
           card.className = 'bg-gray-900 p-2 rounded hover:scale-105 transition';
           card.innerHTML = `
@@ -324,14 +366,16 @@
     // Load Chapter
     async function loadChapter(id) {
       try {
-        const res = await fetch(`https://api.mangadex.org/at-home/server/${id}`);
+        const res = await fetch(`https://api.mangadex.org/at-home/server/${id}`, {
+          headers: { 'User-Agent': 'StreamMe-Manga-App/1.0' }
+        });
         if (!res.ok) throw new Error(`API error: ${res.status}`);
         const { baseUrl, chapter } = await res.json();
         const container = document.getElementById('chapterImages');
         container.innerHTML = '';
         chapter.data.forEach(img => {
           const image = document.createElement('img');
-          image.src = `${baseUrl}/data/${chapter.hash}/${img}`;
+          image.src = `/api/proxy/chapter/${chapter.hash}/${img}`;
           image.className = 'w-full rounded mx-auto';
           container.appendChild(image);
         });
